[gd_scene load_steps=89 format=2]

[ext_resource path="res://src/test sprites/rough walk cyclev 1.0 .png" type="Texture" id=1]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=2]
[ext_resource path="res://src/test sprites/rough landing 1.0 -Sheet.png" type="Texture" id=3]
[ext_resource path="res://objects/environment/CliffDetector.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 64.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 832, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1088, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 832, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1088, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1088, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1152, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1216, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1344, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1408, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1472, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1600, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1664, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1728, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "landing_soft",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "landing_hard",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "throw",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=35]
radius = 32.0
height = 64.0

[sub_resource type="Animation" id=36]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "falling" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=37]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=38]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=73]
resource_name = "landing_hard"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "landing_hard" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 14 ]
}

[sub_resource type="Animation" id=39]
resource_name = "landing_soft"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "falling" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=40]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.3 ]
}

[sub_resource type="Animation" id=81]
resource_name = "throw"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "throw" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "falling"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "landing_hard"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "landing_soft"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "moving"

[sub_resource type="AnimationNodeAnimation" id=82]
animation = "throw"

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
advance_condition = "IsMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
advance_condition = "IsNotMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
advance_condition = "IsFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
advance_condition = "IsJumping"

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
advance_condition = "IsFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
advance_condition = "IsJumping"

[sub_resource type="AnimationNodeStateMachineTransition" id=52]
advance_condition = "IsFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
switch_mode = 2
auto_advance = true
advance_condition = "IsMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id=75]
advance_condition = "IsNotFalling"

[sub_resource type="AnimationNodeStateMachineTransition" id=76]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=77]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=83]

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=86]

[sub_resource type="AnimationNodeStateMachineTransition" id=87]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=56]
states/falling/node = SubResource( 41 )
states/falling/position = Vector2( 359, 372 )
states/idle/node = SubResource( 42 )
states/idle/position = Vector2( 602, 229 )
states/jump/node = SubResource( 43 )
states/jump/position = Vector2( 969, 354 )
states/landing_hard/node = SubResource( 74 )
states/landing_hard/position = Vector2( 101, 201 )
states/landing_soft/node = SubResource( 44 )
states/landing_soft/position = Vector2( 341, 246 )
states/moving/node = SubResource( 45 )
states/moving/position = Vector2( 625, 73 )
states/throw/node = SubResource( 82 )
states/throw/position = Vector2( 969, 229 )
transitions = [ "idle", "moving", SubResource( 46 ), "moving", "idle", SubResource( 47 ), "idle", "falling", SubResource( 48 ), "idle", "jump", SubResource( 49 ), "jump", "falling", SubResource( 50 ), "moving", "jump", SubResource( 51 ), "moving", "falling", SubResource( 52 ), "landing_soft", "idle", SubResource( 54 ), "landing_soft", "moving", SubResource( 55 ), "falling", "landing_hard", SubResource( 75 ), "landing_hard", "idle", SubResource( 76 ), "landing_hard", "moving", SubResource( 77 ), "moving", "throw", SubResource( 83 ), "throw", "falling", SubResource( 84 ), "idle", "throw", SubResource( 86 ), "throw", "idle", SubResource( 87 ) ]
start_node = "idle"
graph_offset = Vector2( 10, 36 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=57]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 64
frames = SubResource( 34 )
animation = "throw"
playing = true

[node name="TriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource( 35 )

[node name="GroundRayCasts" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="GroundRayCasts"]
position = Vector2( -26.25, 40.834 )
enabled = true
cast_to = Vector2( 0, 24 )
collision_mask = 3

[node name="Center" type="RayCast2D" parent="GroundRayCasts"]
position = Vector2( 0, 56 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="Right" type="RayCast2D" parent="GroundRayCasts"]
position = Vector2( 26, 41 )
enabled = true
cast_to = Vector2( 0, 24 )
collision_mask = 3

[node name="ThrowPosition" type="Node2D" parent="."]
position = Vector2( 24, -32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/falling = SubResource( 36 )
anims/idle = SubResource( 37 )
anims/jump = SubResource( 38 )
anims/landing_hard = SubResource( 73 )
anims/landing_soft = SubResource( 39 )
anims/moving = SubResource( 40 )
anims/throw = SubResource( 81 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 56 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 57 )
parameters/conditions/IsFalling = false
parameters/conditions/IsJumping = false
parameters/conditions/IsMoving = false
parameters/conditions/IsNotFalling = true
parameters/conditions/IsNotMoving = true

[node name="CliffDetector" parent="." instance=ExtResource( 4 )]
[connection signal="face_dir_changed" from="." to="CliffDetector" method="_on_Player_face_dir_changed"]
